# foam-examples

./: README.md
foamalgo/cpp/: README.md
foamalgo/cpp/det_image_preprocess/: CMakeLists.txt  README.md  main.cpp
foamalgo/python/: AGIPD_geometry_and_azimuthal_integration.ipynb  DSSC_geometry_and_calibration.ipynb  Generalized_geometry.ipynb  LPD_geometry.ipynb  LPD_geometry_and_image_mask.ipynb  README.md  jungfrau8.geom
